--- a/mota-theme/assets/sass/_single-photo_mota.scss
+++ b/mota-theme/assets/sass/_single-photo_mota.scss
@@ -51,6 +51,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 118px;
 }
 
 .photoContact {
@@ -73,12 +74,24 @@
     display: flex;
     flex-direction: column;
 }
+
 .previewImgBox {
     position: relative;
+    width: 80px;
+    min-height: 80px;
+    overflow: hidden;
+    
     .previewImg {
-        width: 80px;
+        position: absolute;
         aspect-ratio: 1;
-        visibility: hidden;
+        transform: translateY(90px);
+        opacity: 0;
+        transition: transform 250ms, opacity 750ms;
+    }
+    
+    .visible {
+        transform: translateY(0);
+        opacity: 1;
     }
 }
 
