--- a/mota-theme/assets/sass/_lightbox_mota.scss
+++ b/mota-theme/assets/sass/_lightbox_mota.scss
@@ -63,10 +63,12 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    position: relative;
     img {
         width: 100%;
         height: auto;
         animation: lightboxIn 350ms;
+        padding-top: 50px;
     }
 }
 
@@ -74,4 +76,20 @@
     width: 50px;
     height: 50px;
     background: url(../img/loader.svg) center center / 100% 100% ;
+}
+
+.refLightbox, .catLightbox {
+    position: absolute;
+    bottom: -85px;
+    color: white;
+    text-transform: uppercase;
+    padding-bottom: 50px;
+}
+
+.refLightbox {
+    left: 0;
+}
+
+.catLightbox {
+    right: 0;
 }
