--- a/mota-theme/assets/sass/_lightbox_mota.scss
+++ b/mota-theme/assets/sass/_lightbox_mota.scss
@@ -65,8 +65,8 @@
     min-height: 100vh;
     position: relative;
     img {
-        width: 100%;
-        height: auto;
+        max-width: 100%;
+        max-height: calc(100vh - 120px);
         animation: lightboxIn 350ms;
         padding-top: 50px;
     }
@@ -80,10 +80,10 @@
 
 .refLightbox, .catLightbox {
     position: absolute;
-    bottom: -85px;
+    bottom: 0px;
     color: white;
     text-transform: uppercase;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
 }
 
 .refLightbox {
